# mor

./: CMakeLists.txt  README.adoc  README.md
src/: CMakeLists.txt
src/DSA/: CMakeLists.txt  deterministic_sensitivity_analysis.cpp
src/SA/: CMakeLists.txt  FunctionalChaos.hpp  README.md  SA.cpp  plot_data.py  results.hpp  sensitivity_analysis.cpp
src/eye2brain/: CMakeLists.txt  eye2brain.cpp  eye2brainapp.cpp
src/eye2brain/eye2brain/: eye2brain.cfg
test/: CMakeLists.txt
test/feelpp/: CMakeLists.txt  fpp.cpp
test/omp/: CMakeLists.txt  test_omp.cpp
test/openturns/: CMakeLists.txt  polynomial_chaos.cpp  polynomial_chaos.py  sobol.py  test.sh  test_openturns.cpp
test/test_MPI/: CMakeLists.txt  mpi_gather.cpp  mpi_ot.cpp
